NEWS for rsm package


Changes for version 2.9 ()
  * Changed license to ease with interdependencies with other packages
  * Moved development codebase to github repository rvlenth/rsm
  * 
  

Changes for version 2.8 (14 October 2016)
  * Added 'adjust' argument to 'rsm()'
  * Added support for lsmeans package


Changes for version 2.7-4 (6 October 2015)
  * Fixed error incurred when PQ() has only one argument


Changes for version 2.7-3 (2 September 2015)
  * Added NAMESPACE imports of non-base packages referenced


Changes for version 2.7-2 (12 May 2015)
  * Modified the "rs-illus" vignette slightly to make it less 
    confusing


Changes in version 2.07 (1 October 2014)
  * Including factors specified in 'at' in the slice labels


Changes in version 2.06 (18 April 2014)
  * Fixed a bug in contour.lm wherein if xlabs is supplied,
    decoding was disabled
  * Additional messages from contour.lm for misspecified axis labels.

Changes in version 2.05 (14 April 2014)

  * Added back some details (e.g. R^2, F) earlier omitted from 
    summary.


Changes in version 2.04 (5 February 2014)

  * Correction in bbd: Wrong design was generated when k = 6


Changes in version 2.03 (21 February 2013)

  * Corrected error in slice labels present since 2.00
    (Thanks AGAIN go to Keith Ponting, Avaya)


Changes in version 2.02 (9 February 2013)

  * Corrected deparse bug that occurs when model formula wraps a line.
    (Thanks go to Keith Ponting, Avaya)


Changes in version 2.01 (29 December 2012)

  * Added .ccd.1.41 and .bbd.141 functions, so that given the random seed, 
    one can reproduce a design that was generated in version 1.41 or earlier
    with the identical randomization. These functions are NOT exported.

  * Renamed 'join' to 'djoin' to avoid clashing with 'join' function in 
    the package conf.design

  * coded.data and as.coded.data generate automatic codings if no formulas 
    are provided.



Changes in version 2.00 (7 December 2012)
