@@ -42,19 +42,19 @@
 
 ### New version based on lsmeans:::recover.data.call
 model.data = function (lmobj, lhs = FALSE) {
-  fcall = lmobj$call
-  m = match(c("formula", "data", "subset", "weights"), names(fcall), 0L)
-  fcall = fcall[c(1L, m)]
-  fcall[[1L]] = as.name("model.frame")
-  trms = terms(lmobj)
-  if (!lhs)
-    trms = delete.response(trms)
-  form = reformulate(all.vars(trms))
-  fcall$formula = update(trms, form)
-  env = environment(trms)
-  if (is.null(env)) 
-    env = parent.frame()
-  eval(fcall, env, parent.frame())
+    fcall = lmobj$call
+    m = match(c("formula", "data", "subset", "weights"), names(fcall), 0L)
+    fcall = fcall[c(1L, m)]
+    fcall[[1L]] = as.name("model.frame")
+    trms = terms(lmobj)
+    if (!lhs)
+        trms = delete.response(trms)
+    form = reformulate(all.vars(trms))
+    fcall$formula = update(trms, form)
+    env = environment(trms)
+    if (is.null(env)) 
+        env = parent.frame()
+    eval(fcall, env, parent.frame())
 }
 
 ### contour plot(s) for a lm
