@@ -7,9 +7,8 @@
 \alias{codings.rsm}
 \alias{canonical}
 \alias{xs}
-\alias{lsmeans}
-\alias{recover.data.rsm}
-\alias{lsm.basis.rsm}
+\alias{recover_data.rsm}
+\alias{emm_basis.rsm}
 
 \title{Response-surface regression}
 \description{
@@ -97,7 +96,7 @@ The first version, however, creates duplicate \code{x2:x3} terms -- which \code{
 }
 
 \note{
-Support is provided for the \pkg{lsmeans} package: its \code{\link[lsmeans]{lsmeans}} and related functions work with special provisions for models fitted to coded data. The optional \code{mode} argument can have values of \code{"asis"} (the default), \code{"coded"}, or \code{"decoded"}. The first two are equivalent and simply return LS means based on the original model formula and the variables therein (raw or coded), without any conversion. When coded data were used and the user specifies \code{mode = "decoded"}, the user must specify results in terms of the decoded variables rather than the coded ones. See the illustration in the Examples section.
+Support is provided for the \pkg{emmeans} package: its \code{\link[emmeans]{emmeans}} and related functions work with special provisions for models fitted to coded data. The optional \code{mode} argument can have values of \code{"asis"} (the default), \code{"coded"}, or \code{"decoded"}. The first two are equivalent and simply return LS means based on the original model formula and the variables therein (raw or coded), without any conversion. When coded data were used and the user specifies \code{mode = "decoded"}, the user must specify results in terms of the decoded variables rather than the coded ones. See the illustration in the Examples section.
 }
 \references{
 Lenth RV (2009) ``Response-Surface Methods in R, Using rsm'', 
@@ -127,14 +126,12 @@ canonical(RRex.rsm)
 canonical(RRex.rsm, threshold = 1)  # xs is MUCH closer to the experiment
 
 \dontrun{
-# Illustration of lsmeans support
-require("lsmeans")
-
-lsmeans(CR.rs2, ~ x1 * x2, mode = "coded", 
+# Illustration of emmeans/lsmeans support
+emmeans::emmeans(CR.rs2, ~ x1 * x2, mode = "coded", 
         at = list(x1 = c(-1, 0, 1), x2 = c(-2, 2)))
         
 # The following will yield the same results:
-lsmeans(CR.rs2, ~ Time * Temp, mode = "decoded", 
+emmeans::emmeans(CR.rs2, ~ Time * Temp, mode = "decoded", 
         at = list(Time = c(80, 85, 90), Temp = c(165, 185)))
 }
 }
